set pnpMode: loose

--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -9,7 +9,7 @@ $bg-white: #fff;
 }
 
 body {
-  font-family: "Lato", sans-serif;
+  font-family: 'Lato', sans-serif;
   box-sizing: border-box;
   font-size: 1.4rem;
   background-color: $bg-faded;
